# sphinx-readme-io

./: .gitignore  .releaserc.yaml  CHANGELOG.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  test.yml
src/sphinx_rdme/: __init__.py  builder.py  transforms.py
src/sphinx_readme_io/: __init__.py  builder.py  transforms.py
tests/: test_builder.py
tests/docs/: conf.py  getting-started.rst  index.rst
tests/docs/advanced/: configuration.rst
tests/docs/api/: index.rst
