[project]
name = "sphinx-readme-io"
version = "0.1.0"
description = "A Sphinx extension to build documentation compatible with readme.io"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["sphinx", "documentation", "readme.io", "markdown"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation :: Sphinx",
]
dependencies = [
    "sphinx>=7.0",
    "sphinx-markdown-builder>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/sphinx-readme-io"
Repository = "https://github.com/yourusername/sphinx-readme-io"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sphinx_readme_io"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
