[project]
name = "sphinx-rdme"
version = "0.1.0"
description = "A Sphinx extension to build documentation compatible with rdme for readme.io"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Jason D'Amour", email = "jasondamour98@gmail.com" }
]
keywords = ["sphinx", "documentation", "rdme", "markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation :: Sphinx",
]
dependencies = [
    "sphinx>=7.0",
    "sphinx-markdown-builder>=0.6",
]

[project.urls]
Homepage = "https://github.com/jasondamour/sphinx-rdme"
Repository = "https://github.com/jasondamour/sphinx-rdme"

[build-system]
requires = ["uv_build>=0.9.23,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.0,<10",
    "pytest-cov>=7.0.0,<8",
    "ruff>=0.14.11,<1",
    "basedpyright>=1.37.1,<2",
]

[tool.basedpyright]
reportAny = false
reportExplicitAny = false
reportDeprecated = false  # OptionParser deprecation - no alternative API available yet
reportUnreachable = false  # Python version-conditional code
reportImplicitOverride = false  # @override decorator from typing_extensions not recognized
reportUnknownMemberType = false  # Untyped third-party libs (sphinx-markdown-builder)
reportUnknownVariableType = false  # Cascading from untyped libs
reportUnknownArgumentType = false  # Cascading from untyped libs
reportUnnecessaryIsInstance = false  # Type narrowing for runtime safety